--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
       }
     </style>
     <link href="docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="docs/assets/css/lightbox.css" rel="stylesheet">
     <link href="docs/assets/css/custom.css" rel="stylesheet">
 
     <script src="docs/assets/js/jquery.js"></script>
+    <script src="js/lightbox.js"></script>
     <script src="docs/assets/js/bootstrap.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular-resource.js"></script>
     <script src="docs/assets/js/mongolab.js"></script>
+    
 
     <script type="text/javascript">
 
@@ -83,7 +86,7 @@
     </script>
 
     <script type="text/javascript">
-      $('.span4').affix(offset: { x: 620 });
+      $('.span4').affix();
     </script>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -137,6 +140,18 @@
             <input type="submit" class="btn btn-large btn-primary btn-block" value="Comment">
           </form> 
         </div>
+      </div>
+
+      <div class="row-fluid links">
+        <a href="images/home.jpg" rel="lightbox" class="circle">Home</a>
+        <a href="images/blog.jpg" rel="lightbox" class="circle">Blog</a>
+        <a href="images/services.jpg" rel="lightbox" class="circle">Services</a>
+      </div>
+
+      <div class="row-fluid links">
+        <a href="images/FAQ.jpg" rel="lightbox" class="circle">FAQ</a>
+        <a href="images/activtrax.jpg" rel="lightbox" class="circle">ActivTrax</a>
+        <a href="images/contact.jpg" rel="lightbox" class="circle">Contact</a>
       </div>
     </div> 
 
