--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link href="docs/assets/css/lightbox.css" rel="stylesheet">
     <link href="docs/assets/css/custom.css" rel="stylesheet">
 
-    <script src="docs/assets/js/jquery.js"></script>
+    <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/lightbox.js"></script>
     <script src="docs/assets/js/bootstrap.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.4/angular.min.js"></script>
