--- a/class_06/index.html
+++ b/class_06/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title></title>
+    <title>Home</title>
     <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   </head>
 
@@ -19,19 +19,35 @@
       </div>
     </div>
 
-    <div class="">
-      <div class="container">
-        <div class="nav">
-          <a href="#" class="nav-link">Home</a>
-          <a href="#" class="nav-link">Blog</a>
-          <a href="#" class="nav-link">Services</a>
-          <a href="#" class="nav-link">FAQ</a>
-          <a href="#" class="nav-link">ActivTrax</a>
-          <a href="#" class="nav-link">Contact</a>
-        </div>
-        <div class="logo">LOGO</div>
+    <div class="container">
+      <div class="nav">
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">Blog</a>
+        <a href="#" class="nav-link">Services</a>
+        <a href="#" class="nav-link">FAQ</a>
+        <a href="#" class="nav-link">ActivTrax</a>
+        <a href="#" class="nav-link">Contact</a>
       </div>
+      <div class="logo">LOGO</div>
     </div>
+
+    <div class="container">
+      <div class="feature"></div>
+
+      <div class="sidebar"></div>
+    </div>
+
+    <div class="container clearfix">
+      <div class="third"></div>
+      <div class="third"></div>
+      <div class="third"></div>
+    </div>
+    
+    <div class="container">
+      <div class="cta"></div>
+    </div>
+
+    <div class="clearfix"></div>    
 
     <div class="footer"></div>
   </body>
