--- a/class_06/index.html
+++ b/class_06/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <div class="header clearfix">
       <div class="container">
         <ul class="social-links">
           <li class="s-link"></li>
@@ -21,12 +21,12 @@
 
     <div class="container">
       <div class="nav">
-        <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Blog</a>
-        <a href="#" class="nav-link">Services</a>
-        <a href="#" class="nav-link">FAQ</a>
-        <a href="#" class="nav-link">ActivTrax</a>
-        <a href="#" class="nav-link">Contact</a>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="blog.html" class="nav-link">Blog</a>
+        <a href="services.html" class="nav-link">Services</a>
+        <a href="faq.html" class="nav-link">FAQ</a>
+        <a href="activtrax.html" class="nav-link">ActivTrax</a>
+        <a href="contact.html" class="nav-link">Contact</a>
       </div>
       <div class="logo">LOGO</div>
     </div>
