--- a/class_06/services.html
+++ b/class_06/services.html
@@ -37,6 +37,26 @@
       <div class="sidebar small"></div>
     </div>   
 
+    <div class="container">
+      <div class="sidebar about-us"></div>
+
+      <div class="feature about-blurb"></div>
+    </div>
+
+    <div class="container">
+      <div class="third services"></div>
+      <div class="third services"></div>
+      <div class="third services"></div>
+    </div> 
+
+    <div class="container">
+      <div class="third services"></div>
+      <div class="third services"></div>
+      <div class="third services bottom"></div>
+    </div>
+
+    <div class="clearfix"></div>
+
     <div class="footer"></div>
   </body>
 </html>
