More work on the header

--- a/class_07/index.html
+++ b/class_07/index.html
@@ -24,6 +24,7 @@
         </ul>
         <section>
           <ul class="right">
+            <li><a href="#" class="login">Login</a></li>
             <li class="search">
               <form class="collapse">
                 <input type="search" class="round" placeholder="Search...">
@@ -36,14 +37,12 @@
 
     <div class="row">
       <nav class="eight columns">
-        <ul class="inline-list">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="blog.html" class="nav-link">Blog</a></li>
-          <li><a href="services.html" class="nav-link">Services</a></li>
-          <li><a href="faq.html" class="nav-link">FAQ</a></li>
-          <li><a href="activtrax.html" class="nav-link">ActivTrax</a></li>
-          <li><a href="contact.html" class="nav-link">Contact</a></li>
-        </ul>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="blog.html" class="nav-link">Blog</a>
+        <a href="services.html" class="nav-link">Services</a>
+        <a href="faq.html" class="nav-link">FAQ</a>
+        <a href="activtrax.html" class="nav-link">ActivTrax</a>
+        <a href="contact.html" class="nav-link">Contact</a>
       </nav>
 
       <div class="four columns">
