FAQ, ActivTrax also done

--- a/class_07/activtrax.html
+++ b/class_07/activtrax.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>ActivTrax</title>
     <!-- Included CSS Files -->
     <link rel="stylesheet" href="stylesheets/app.css">
     <script src="javascripts/foundation/modernizr.foundation.js"></script>
@@ -51,7 +51,7 @@
     </div>
 	<div class="row title-section">
 		<div class="eight columns page-title">
-			<h1 class="title">Contact</h1>
+			<h1 class="title">ActivTrax</h1>
 		</div>
 		<div class="four columns">
 			<div class="callout_small">
@@ -67,28 +67,20 @@
 		<div class="four columns">
 			<p>Nulla vitae justo nec est faucibus semper. Maecenas at turpis odio, quis interdum mi. Quisque tellus nisi, rhoncus in pulvinar ut, consequat vel mi. In hac habitasse platea dictumst. Aliquam lacinia turpis eu sem pharetra eu placerat nunc rhoncus. Vestibulum cursus sapien ut urna faucibus luctus.</p>
 		</div>
-		<div class="four columns">
-			<img src="http://placehold.it/300x180">
-		</div>
-		<div class="four columns contact-info">
-			<div class="row">
-				<p class="contact-item"><img class="icon" src="http://placehold.it/42x42"> Phone: (503) 281-4776</p>
-			</div>
-			<div class="row">
-				<p class="contact-item"><img class="icon" src="http://placehold.it/42x42"> Email: (503) info@hollywoodfitness.net</p>
-			</div>
-			<div class="row">
-				<p class="contact-item"><img class="icon" src="http://placehold.it/42x42"> Address: 5223 NE Sandy<br/>Portland, OR 97213</p>
-			</div>
+		<div class="eight columns">
+			<img src="http://placehold.it/620x220">
 		</div>
 	</div>
-	<div class="full-width-color">
-		<div class="white-bar"></div>
-			<div class="row">
-				<div class="ten columns centered map-section">
-					<h1 class="map-title">Map</h1>
-				</div>
-			</div>
+	
+	<div class="row spaced">
+		<div class="four columns">
+			<img src="http://placehold.it/300x170">
+		</div>
+		<div class="eight columns">
+			<p>Curabitur non purus eget arcu euismod rutrum. Praesent ultrices lorem ac lacus egestas eget venenatis felis porttitor. Aliquam auctor vulputate nisl eu mattis. Maecenas dignissim leo nec ante varius sit amet ultrices enim elementum. In et lectus vel sem interdum sodales. </p>
+			<p>In pretium nibh et est imperdiet vulputate. Nullam euismod mollis lectus, at suscipit nisl bibendum eget. Cras cursus congue nulla, nec condimentum erat imperdiet ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</div>
+	
 	</div>
 
     <div class="row footer">
