--- a/class_07/index.html
+++ b/class_07/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row hide-for-large-down">
       <nav class="eight columns">
         <a href="index.html" class="nav-link">Home</a>
         <a href="blog.html" class="nav-link">Blog</a>
@@ -158,9 +158,9 @@
     <!-- Application Javascript, safe to override -->
     <script src="javascripts/foundation/app.js"></script>
     <script type="text/javascript">
-     $(window).load(function() {
-         $("#featured").orbit();
-     });
+      $(window).load(function() {
+        $("#featured").orbit();
+      });
     </script>
   </body>
 </html>
