--- a/class_07/blog.html
+++ b/class_07/blog.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Foundation</title>
+    <title>Blog</title>
     <!-- Included CSS Files -->
     <link rel="stylesheet" href="stylesheets/app.css">
     <script src="javascripts/foundation/modernizr.foundation.js"></script>
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row hide-for-small">
       <nav class="eight columns">
         <a href="index.html" class="nav-link">Home</a>
         <a href="blog.html" class="nav-link">Blog</a>
