--- a/class_07/contact.html
+++ b/class_07/contact.html
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row hide-for-small">
       <nav class="eight columns">
         <a href="index.html" class="nav-link">Home</a>
         <a href="blog.html" class="nav-link">Blog</a>
