--- a/class_08/index.html
+++ b/class_08/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Foundation 4</title>
+    <title>Hollywood Fitness</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/app.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -67,9 +67,9 @@
     <div class="row">
       <div class="large-8 columns">
         <div class="cycle-slideshow">
-          <img src="http://placehold.it/1000x550">
-          <img src="http://placehold.it/1001x550">
-          <img src="http://placehold.it/1002x550">
+          <img src="http://placehold.it/1000x475">
+          <img src="http://placehold.it/1001x475">
+          <img src="http://placehold.it/1002x475">
         </div>
 
         <div class="row">
@@ -90,7 +90,23 @@
       </div>
 
       <div class="large-4 columns">
+        <div class="row">
+          <div class="large-10 columns large-centered news-wrapper">
+            <span class="news">NEWSLETTER</span>
+            <span class="letter">Sign up for <strong>news</strong> and <strong>updates</strong></span>
+            <input type="text" class="rounded" placeholder="Name...">
+            <input type="text" class="rounded" placeholder="Email...">
+            <a class="round button view-more expand" href="#">View More</a>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="large-12 columns pass">
+            <div class="large-11 columns large-centered">
+              <a class="round button view-more expand free" href="#">View More</a>
+            </div>
+          </div>
+        </div>
       </div> 
     </div>
 
