--- a/class_08/index.html
+++ b/class_08/index.html
@@ -27,7 +27,7 @@
       <section class="top-bar-section">
         <!-- Right Nav Section -->
         <ul class="right">
-          <li><a href="#" class="login">Log in</a></li>
+          <li><a href="#" data-reveal-id="myModal" class="login">Log in</a></li>
           <li class="has-form">
             <form>
               <div class="row collapse">
@@ -38,11 +38,11 @@
             </form>
           </li>
           <li class="show-nav"><a href="index.html">Home</a></li>
-          <li class="show-nav"><a href="blog.html">Blog</a></li>
-          <li class="show-nav"><a href="services.html">Services</a></li>
-          <li class="show-nav"><a href="faq.html">FAQ</a></li>
-          <li class="show-nav"><a href="activtrax.html">ActivTrax</a></li>
-          <li class="show-nav"><a href="contact.html">Contact</a></li>
+          <li class="show-nav"><a href="#" data-reveal-id="myModal">Blog</a></li>
+          <li class="show-nav"><a href="#" data-reveal-id="myModal">Services</a></li>
+          <li class="show-nav"><a href="#" data-reveal-id="myModal">FAQ</a></li>
+          <li class="show-nav"><a href="#" data-reveal-id="myModal">ActivTrax</a></li>
+          <li class="show-nav"><a href="#" data-reveal-id="myModal">Contact</a></li>
         </ul>
       </section>
     </nav>
@@ -51,11 +51,11 @@
       <div class="large-8 columns hide-nav">
         <ul class="inline-list main-nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">ActivTrax</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#" data-reveal-id="myModal">Blog</a></li>
+          <li><a href="#" data-reveal-id="myModal">Services</a></li>
+          <li><a href="#" data-reveal-id="myModal">FAQ</a></li>
+          <li><a href="#" data-reveal-id="myModal">ActivTrax</a></li>
+          <li><a href="#" data-reveal-id="myModal">Contact</a></li>
         </ul>
       </div>
 
@@ -74,16 +74,18 @@
 
         <div class="row">
           <div class="large-12 columns">
-            <div class="large-6 columns slider-left">
-              <img src="img/pager_hover.png" class="left pager">
-              <img src="img/pager.png" class="left pager">
-              <img src="img/pager.png" class="left pager">
-            </div>
+            <div class="large-12 columns slider">
+              <div class="left">
+                <img src="img/pager_hover.png" class="left pager">
+                <img src="img/pager.png" class="left pager">
+                <img src="img/pager.png" class="left pager">
+              </div>
 
-            <div class="large-6 columns slider-right">
-              <img src="img/arrow_next.gif" class="ctrl right">
-              <img src="img/arrow_prev.gif" class="ctrl right">
-              <span class="ctrl right">Image Title</span>
+              <div class="right">
+                <img src="img/arrow_next.gif" class="ctrl right">
+                <img src="img/arrow_prev.gif" class="ctrl right">
+                <span class="ctrl right">Image Title</span>
+              </div>
             </div>
           </div>
         </div>
@@ -96,14 +98,14 @@
             <span class="letter">Sign up for <strong>news</strong> and <strong>updates</strong></span>
             <input type="text" class="rounded input" placeholder="Name...">
             <input type="text" class="rounded input" placeholder="Email...">
-            <a class="round button view-more expand" href="#">View More</a>
+            <a class="round button view-more expand" href="#" data-reveal-id="myModal">View More</a>
           </div>
         </div>
 
         <div class="row">
           <div class="large-12 columns pass">
             <div class="small-4 large-11 columns large-centered small-centered">
-              <a class="round button view-more expand free" href="#">View More</a>
+              <a class="round button view-more expand free" href="#" data-reveal-id="myModal">View More</a>
             </div>
           </div>
         </div>
@@ -118,7 +120,7 @@
               <h3 class="content-head">ABOUT OUR GYM</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam blandit consequat erat at hendrerit. In fermentum condimentum quam sed molestie. Ut eleifend lacinia neque ac eleifend. Sed eu velit non dolor.</p>  
               <p class="bot">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <a href="#" class="read-more">Read More...</a>
+              <a href="#" data-reveal-id="myModal" class="read-more">Read More...</a>
             </div>
 
             <div class="large-4 columns testimonial">
@@ -142,8 +144,8 @@
                   <h1 class="stats">PERSONAL STATS</h1>
                   <span class="personal">You must log in to view stats</span>
                   <div class="row stat-btns">
-                    <a class="round button view-more white" href="#">Log in</a>
-                    <a class="round button view-more blue" href="#">Sign Up</a>
+                    <a class="round button view-more white" href="#" data-reveal-id="myModal">Log in</a>
+                    <a class="round button view-more blue" href="#" data-reveal-id="myModal">Sign Up</a>
                   </div>
                 </div>
               </div>
@@ -158,11 +160,11 @@
         <div class="large-6 columns">
           <ul class="inline-list foot-nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">ActivTrax</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" data-reveal-id="myModal">Blog</a></li>
+            <li><a href="#" data-reveal-id="myModal">Services</a></li>
+            <li><a href="#" data-reveal-id="myModal">FAQ</a></li>
+            <li><a href="#" data-reveal-id="myModal">ActivTrax</a></li>
+            <li><a href="#" data-reveal-id="myModal">Contact</a></li>
           </ul>
         </div>
 
@@ -190,6 +192,12 @@
           </div>
         </div>
 
+      </div>
+    </div>
+
+    <div id="myModal" class="reveal-modal">
+      <div class="flex-video">
+        <iframe width="420" height="315" src="http://www.youtube.com/embed/dQw4w9WgXcQ?rel=0;&autoplay=1" frameborder="0" allowfullscreen></iframe>      
       </div>
     </div>
 
